# kxtj3_demo

./: CMakeLists.txt  Kconfig  README.rst  prj.conf
boards/: kxtj3_dt_symbols.h  nrf52840dk_nrf52840.overlay  xiao_ble.overlay
drivers/: CMakeLists.txt  Kconfig
drivers/sensor/: CMakeLists.txt  Kconfig
drivers/sensor/kxtj3/: CMakeLists.txt  Kconfig  kxtj3.c  kxtj3.h  kxtj3_bindings.h  kxtj3_i2c.c  kxtj3_trigger.c  parameters.h
dts/bindings/sensor/: kionix,kxtj3-common.yaml  kionix,kxtj3.yaml
src/: main.c
